--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-use-websocket": "^4.2.0",
     "swedish-holidays": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
