--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "node": "18.12.1"
   },
   "dependencies": {
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^4.2.0",
     "swedish-holidays": "^1.1.0",
+    "typescript": "^4.9.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
